2003-07-24  Ettore Perazzoli  <ettore@ximian.com>

	* mail-mt.c (do_op_status): Pass "evolution-mail" as the ID to
	evolution_activity_client_new().  [This is just a temporary thing
	to avoid the fact that we don't have component-factory.h anymore.
	Eventually we'll just get rid of the activity client stuff.]

	* mail-component-factory.c: Added to the build.  Also, finished
	implementing and moving the factory over from component-factory.c.

	* component-factory.c: Removed from the build.
	* component-factory.h: Removed from the build.

	* mail-component.c: Removed some debugging messages.

2003-07-23  Ettore Perazzoli  <ettore@ximian.com>

	* subscribe-dialog.c: Converted to use EStorages instead of
	EvolutionStorages and the new MailComponent object.

	* mail.h: Nuked a bunch of stuff.  This will go away when I am
	done refactoring.

	* mail-offline-handler.c: Use the new MailComponent object.

	* mail-folder-cache.c, mail-folder-cache.h: Converted to use
	EStorages instead of EvolutionStorages.

	* mail-display.c: Use g_timeout and g_source functions instead of
	gtk_timeout functions.

	* mail-send-recv.c: Use g_timeout and g_source functions instead
	of gtk_timeout functions.
	(receive_update_got_store): Updated for the new mail_note_store().

	* mail-session.c: Use g_timeout and g_source functions instead of
	gtk_timeout functions.

	* mail-config-factory.c (factory): Removed.

	* folder-browser.c (folder_browser_destroy): Use GLib
	timeout/source functions instead of the deprecated GTK ones.
	(done_message_selected): Likewise.
	(folder_browser_gui_init): Protect against fb->search being NULL.

	* mail-account-gui.c (add_new_store): Use new MailComponent object
	and EStorages instead of EvolutionStorages.
	(mail_account_gui_save): Likewise.

	* mail-accounts.c (account_delete_clicked): Use new MailComponent
	object and EStorages instead of EvolutionStorages.
	(account_able_clicked): Likewise.
	(account_able_toggled): Likewise.
