@@ -1,3 +1,10 @@
+2003-07-25  Ettore Perazzoli  <ettore@ximian.com>
+
+	* mail-component.c (browser_page_switched_callback): New callback
+	for the "page_switched" signal on EStorageBrowser; deactivate the
+	previous page, activate the new one.
+	(impl_createControls): Connect.
+
 2003-07-24  Ettore Perazzoli  <ettore@ximian.com>
 
 	* mail-mt.c (do_op_status): Pass "evolution-mail" as the ID to
